# Standart-Algorithms

./: README.md  common.cmake  start.sh
001_Insertion_Sort/: .gitignore
001_Insertion_Sort/doc/: README
001_Insertion_Sort/project/: Makefile
001_Insertion_Sort/src/: insertionsort.cpp
002_Selection_Sort/doc/: README
002_Selection_Sort/project/: Makefile
002_Selection_Sort/src/: selectionsort.cpp
003_Merge_Sort/doc/: README
003_Merge_Sort/project/: Makefile  make_debug.sh
003_Merge_Sort/src/: mergesort.cpp
004_MergeInsertion_Sort/project/: Makefile  make_release.sh
004_MergeInsertion_Sort/src/: mergeinsertionsort.cpp
005_Bubble_Sort/doc/: README
005_Bubble_Sort/project/: Makefile
005_Bubble_Sort/src/: bubblesort.cpp
006_Find_Maximum_Subarray/doc/: README
006_Find_Maximum_Subarray/project/: Makefile
006_Find_Maximum_Subarray/src/: findmaxsubar.cpp
007_Random_Search/doc/: README
007_Random_Search/project/: Makefile
007_Random_Search/src/: randomsearch.cpp
008_Heap_Sort/doc/: README
008_Heap_Sort/project/: Makefile
008_Heap_Sort/src/: heapsort.cpp
009_Priority_Queue/project/: Makefile
009_Priority_Queue/src/: priorityqueue.cpp
010_Quick_Sort/doc/: README
010_Quick_Sort/project/: Makefile
010_Quick_Sort/src/: quicksort.cpp
011_Randomized_Quick_Sort/project/: Makefile
012_Counting_Sort/doc/: README
023_Z_Function/: CMakeLists.txt  prefix_function.cpp  prefix_function.h  test_prefix_function.cpp
024_Prefix_Function/: CMakeLists.txt  test_z_function.cpp  z_function.cpp  z_function.h
results/: mkgraph.sh
(+42 files in other folders)
